<resources>
    <string name="app_name">bmstrans</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="loginhere">Login Here</string>
    <string name="gambar">Gambar</string>
    <string name="fast_and_ea">Fast and Easy Car Rental \nOnly Available Here!</string>
    <string name="anyquestion">Any question or remarks ?</string>
    <string name="justcontact">Just contact us on our platforms ! \nThank you.</string>
    <string name="alamatemail">bsm@gmail.com</string>
    <string name="nohp">+6281234567890</string>
    <string name="alamat">BSMTRANS.NET, Lingkungan Cuking Rawa, Mojopanggung, Kabupaten Banyuwangi, Jawa Timur.</string>
    <string name="orwrite">Or write a message ?</string>
    <string name="writemessage">Just write a message for us down below! Thank you.</string>
    <string name="number">Number :</string>
    <string name="hsewa">Rent fee in a day :</string>
    <string name="jmobil">Type of car :</string>
    <string name="jbensin">Type of fuel :</string>
    <string name="iddata">ID data :</string>
    <string name="nosewa">Nomor data sewa</string>
    <string name="custname">Customer Name :</string>
    <string name="cust">Jaehyun</string>
    <string name="avanza">Avanza</string>
    <string name="nomobil">Car License Number :</string>
    <string name="plat">J 43 HYUN</string>
    <string name="tgl_mulai">Date of Rent (from) :</string>
    <string name="tgl1">2023-11-21</string>
    <string name="tgl_selesai">Date of Rent (end) :</string>
    <string name="tgl2">2024-02-14</string>
    <string name="dur_sewa">Rent Duration :</string>
    <string name="durasi">3 bulan</string>
    <string name="total_harga">Total Rent Fee :</string>
    <string name="total">Rp. 100,000</string>
</resources>