<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactInformation"
    android:background="@color/ijobackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/anyquestion"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/justcontact"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/kuningnom"/>

        <RelativeLayout
            android:layout_marginStart="16dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext">

            <ImageView
                android:paddingStart="16dp"
                android:id="@+id/ic_email"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_email" />

            <TextView
                android:id="@+id/tvemail"
                android:fontFamily="@font/poppinsmedium"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="38dp"
                android:layout_toEndOf="@+id/ivMenu"
                android:padding="20dp"
                android:text="@string/alamatemail"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext">

            <ImageView
                android:paddingStart="16dp"
                android:id="@+id/ic_phone"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/tvnohp"
                android:fontFamily="@font/poppinsmedium"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="38dp"
                android:layout_toEndOf="@+id/ivMenu"
                android:padding="20dp"
                android:text="@string/nohp"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext">

            <ImageView
                android:paddingStart="16dp"
                android:id="@+id/ic_address"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_address" />

            <TextView
                android:id="@+id/tvalamat"
                android:fontFamily="@font/poppinsmedium"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginStart="38dp"
                android:padding="20dp"
                android:text="@string/alamat"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/orwrite"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/writemessage"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/kuningnom"/>

        <EditText
            android:id="@+id/inAlamatEmail"
            android:layout_width="350dp"
            android:layout_marginStart="16dp"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:ems="30"
            android:drawableEnd="@drawable/ic_email"
            android:fontFamily="@font/poppinsmedium"
            android:textColorHint="@color/white"
            android:hint="Type your email address"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inNamaOrg"
            android:layout_width="350dp"
            android:textSize="14sp"
            android:layout_marginStart="14dp"
            android:layout_height="50dp"
            android:ems="30"
            android:drawableEnd="@drawable/ic_baseline_person"
            android:fontFamily="@font/poppinsmedium"
            android:textColorHint="@color/white"
            android:hint="Type your name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inIsiPesan"
            android:layout_width="350dp"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_height="50dp"
            android:ems="30"
            android:drawableEnd="@drawable/ic_email"
            android:fontFamily="@font/poppinsmedium"
            android:textColorHint="@color/white"
            android:hint="Type your message"
            android:inputType="textLongMessage" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include layout="@layout/main_nav_drawer" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>