<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/cardLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7">

        <ImageView
            android:contentDescription="@string/gambar"
            android:id="@+id/iv_logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:src="@drawable/img" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintVertical_bias="0.859" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppinsmedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Username :"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <EditText
            android:paddingStart="8dp"
            android:drawableEnd="@drawable/ic_uname"
            android:textSize="14sp"
            android:fontFamily="@font/poppinsmedium"
            android:id="@+id/etUsernameRegister"
            android:layout_width="250dp"
            android:paddingRight="8dp"
            android:layout_gravity="center"
            android:layout_height="49dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edittext"
            tools:targetApi="jelly_bean"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <TextView
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppinsmedium"
            android:textStyle="bold"
            android:text="Password :"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />


        <EditText
            android:drawableEnd="@drawable/ic_pass"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="14sp"
            android:id="@+id/etPasswordRegister"
            android:layout_width="250dp"
            android:paddingRight="8dp"
            android:layout_gravity="center"
            android:layout_height="49dp"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:targetApi="jelly_bean"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="46dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="Don't have an account? "
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline" />

            <TextView
                android:id="@+id/registerText"
                android:layout_width="49dp"
                android:layout_height="49dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="46dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppinsmedium"
                android:text="Register"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/registerText" />
        </LinearLayout>
    </LinearLayout>
<!--    <ProgressBar-->
<!--        android:id="@+id/progress"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/cardLayout" />-->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:text="Login"
        android:fontFamily="@font/poppinsbold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardLayout"
        android:textColor="#FFFFFF"/>

</androidx.constraintlayout.widget.ConstraintLayout>